--- a/test/BlazorMerge.UnitTests/BlazorMerge.UnitTests.csproj
+++ b/test/BlazorMerge.UnitTests/BlazorMerge.UnitTests.csproj
@@ -9,8 +9,8 @@
     <ItemGroup>
       <PackageReference Include="FluentAssertions" Version="6.11.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
-      <PackageReference Include="Moq" Version="4.18.4" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="NSubstitute" Version="5.0.0" />
       <PackageReference Include="Verify.Xunit" Version="20.4.0" />
     </ItemGroup>
 
