--- a/test/BlazorMerge.UnitTests/BlazorMerge.UnitTests.csproj
+++ b/test/BlazorMerge.UnitTests/BlazorMerge.UnitTests.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="FluentAssertions" Version="6.11.0" />
+      <PackageReference Include="JunitXml.TestLogger" Version="3.0.134" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="NSubstitute" Version="5.0.0" />
