--- a/.github/workflows/branch-master.yml
+++ b/.github/workflows/branch-master.yml
@@ -19,24 +19,15 @@ jobs:
     with:
       version: ${{ needs.get-version.outputs.version }}
       checkout-ref: ${{ github.base_ref }}
-
-  deploy-to-production:
-    needs: [get-version,build]
-    uses: ./.github/workflows/step-deploy.yml
-    secrets: inherit
-    with:
-      deploy-env: production
-      deploy-branch: ${{ github.base_ref }}
-      version: ${{ needs.get-version.outputs.version }}
   
   tag-release:
-    needs: [get-version,deploy-to-production]
+    needs: [build]
     uses: ./.github/workflows/step-tag-release.yml
     with:
       version: ${{ needs.get-version.outputs.version }}
   
   merge-master-to-develop:
-    needs: [deploy-to-production]
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
