--- a/test/BlazorMerge.UnitTests/BlazorMerge.UnitTests.csproj
+++ b/test/BlazorMerge.UnitTests/BlazorMerge.UnitTests.csproj
@@ -13,6 +13,11 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="NSubstitute" Version="5.1.0" />
       <PackageReference Include="Verify.Xunit" Version="23.0.1" />
+      <PackageReference Include="xunit" Version="2.6.6" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
